--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,13 +1,13 @@
   <!doctype html>
   <html lang="en">
-  {% load staticfiles %}
+  {% load staticfiles%}
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="description" content="">
       <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
       <meta name="generator" content="Jekyll v3.8.6">
-      <title>Safdar Ahmed</title>
+      <title>Safdar's Blog</title>
 
       <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
 
@@ -51,45 +51,29 @@
             <div class="navbar-nav ml-auto">
               <a class="nav-item nav-link" href="http://instagram.com/safdarahmed">Instagram</a>
               <a class="nav-item nav-link" href="{% static 'resume.pages' %}">Resume</a>
-              <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
+              <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Blog</a>
             </div>
           </div>
         </nav>
   </header>
 
   <main role="main">
-
-    <section class="jumbotron text-center">
-      <div class="container">
-        <h1>Hey there!</h1>
-        <p class="lead text-muted">Hi, my name is Safdar and this django website is a project I made. I will be adding other projects and updating this portfolio as I go on!</p>
-        <p>
-          <a href="mailto:safdarahmed.18@gmail.com" class="btn btn-primary my-2" target="_top">Email me</a>
-        </p>
-        <img class="img-fluid" src="{% static 'safdar.jpeg' %}" height=300 />
-      </div>
-    </section>
-
-    <div class="album py-5 bg-light">
-      <div class="container">
-
-        <div class="row">
-
-          {% for job in jobs.all %}
-          <div class="col-md-4">
-            <div class="card mb-4 shadow-sm">
-              <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="{{ job.image.url }}" >
-              <div class="card-body">
-                <p class="card-text">{{ job.summary }}</p>
-              </div>
-            </div>
-          </div>
-          {% endfor %}
-
-        </div>
-      </div>
+    <div class="container">
+        <h1 class="text-center pt-3">Welcome to my Blog</h1>
+        <br/>
+        <br/>
+        <h2>Latest Posts</h2>
+        <hr/>
+        {% for blog in blogs.all %}
+          <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
+          {{blog.date_pub}}
+          <br/>
+          <br/>
+          <img class="img-fluid" width="200" height="200" src="{{ blog.image.url }}" >
+          <p>{{blog.summary}}</p>
+          <hr/>
+        {% endfor %}
     </div>
-
   </main>
 
   <footer class="text-muted">
