--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -37,6 +37,12 @@
           font-size: 3.5rem;
         }
       }
+      p{
+        max-width:100%;
+      }
+      p.a{
+        white-space:pre-line;
+        }
     </style>
   </head>
   <body>
@@ -63,7 +69,9 @@
       <p class="text-center"> {{blog.date_pub}}</p>
         <br/>
         <img class="img-fluid" src="{{ blog.image.url }}" >
-        <p>{{blog.body}}</p>
+        <p class="a">
+        {{blog.body}}
+      </p>
   </div>
 </main>
 
