--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -66,7 +66,7 @@
         <p>
           <a href="mailto:safdarahmed.18@gmail.com" class="btn btn-primary my-2" target="_top">Email me</a>
         </p>
-        <img class="img-fluid" src="{% static 'safdar.jpeg' %}" height=300 />
+        <img class="img-fluid" src="{% static 'me.jpeg' %}" height="60%" width="60%"/>
       </div>
     </section>
 
